--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+a {
+    color: black;
+}
+
 .topborder {
     border-top: #cccccc 3px solid;
     height: 40px;
@@ -57,6 +61,7 @@
 
 .portfolioimg {
     height: 200px;
+    width: 200px;
 }
 
 .portfoliobox {
